added tests, fixed MC/MR

--- a/src/ui/view/MainWindow.form
+++ b/src/ui/view/MainWindow.form
@@ -19,6 +19,7 @@
         <properties>
           <editable value="false"/>
           <enabled value="true"/>
+          <font name="Segoe UI" size="16"/>
           <horizontalAlignment value="4"/>
           <text value=""/>
         </properties>
@@ -137,54 +138,6 @@
           <text value="CE"/>
         </properties>
       </component>
-      <component id="85545" class="javax.swing.JButton" binding="btnMin">
-        <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="-"/>
-        </properties>
-      </component>
-      <component id="6bd9b" class="javax.swing.JButton" binding="btnPlus">
-        <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="+"/>
-        </properties>
-      </component>
-      <component id="66d10" class="javax.swing.JButton" binding="btnMemR">
-        <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="MR"/>
-        </properties>
-      </component>
-      <component id="10087" class="javax.swing.JButton" binding="btnMemC">
-        <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="MC"/>
-        </properties>
-      </component>
-      <component id="efdbd" class="javax.swing.JButton" binding="btnMul">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="x"/>
-        </properties>
-      </component>
-      <component id="81ad1" class="javax.swing.JButton" binding="btnDiv">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=":"/>
-        </properties>
-      </component>
       <component id="dfaf2" class="javax.swing.JButton" binding="btnSquare">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -202,6 +155,7 @@
         <properties>
           <editable value="false"/>
           <enabled value="true"/>
+          <font name="Segoe UI" size="14" style="0"/>
           <text value=""/>
         </properties>
       </component>
@@ -213,6 +167,55 @@
         </constraints>
         <properties>
           <editable value="false"/>
+          <font name="Segoe UI" size="11"/>
+        </properties>
+      </component>
+      <component id="81ad1" class="javax.swing.JButton" binding="btnDiv">
+        <constraints>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=":"/>
+        </properties>
+      </component>
+      <component id="efdbd" class="javax.swing.JButton" binding="btnMul">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="x"/>
+        </properties>
+      </component>
+      <component id="10087" class="javax.swing.JButton" binding="btnMemC">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="MC"/>
+        </properties>
+      </component>
+      <component id="66d10" class="javax.swing.JButton" binding="btnMemR">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="MR"/>
+        </properties>
+      </component>
+      <component id="85545" class="javax.swing.JButton" binding="btnMin">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="-"/>
+        </properties>
+      </component>
+      <component id="6bd9b" class="javax.swing.JButton" binding="btnPlus">
+        <constraints>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="+"/>
         </properties>
       </component>
     </children>
