--- a/src/ui/view/MainWindow.form
+++ b/src/ui/view/MainWindow.form
@@ -96,7 +96,7 @@
           <text value="7"/>
         </properties>
       </component>
-      <component id="92be7" class="javax.swing.JButton" binding="banEight">
+      <component id="92be7" class="javax.swing.JButton" binding="btnEight">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
