--- a/src/ui/view/MainWindow.form
+++ b/src/ui/view/MainWindow.form
@@ -12,7 +12,7 @@
     <children>
       <component id="3d38d" class="javax.swing.JTextField" binding="numField">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -216,6 +216,14 @@
         </constraints>
         <properties>
           <text value="+"/>
+        </properties>
+      </component>
+      <component id="c7e0a" class="javax.swing.JButton" binding="btnClearNum">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Clear"/>
         </properties>
       </component>
     </children>
